--- a/.github/workflows/released.yml
+++ b/.github/workflows/released.yml
@@ -5,17 +5,17 @@ permissions:
 
 on:
   release:
-    types:
-      - published
+    types: [published]
 
 jobs:
   virustotal:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: VirusTotal Scan
+      - name: VirusTotal Scan
         uses: crazy-max/ghaction-virustotal@v4
         with:
           vt_api_key: ${{ secrets.VT_API_KEY }}
+          # This tells the action to look at the files you just uploaded to the release
           files: |
-            .exe$
+            *.exe
+            *.dmg
