--- a/.github/workflows/released.yml
+++ b/.github/workflows/released.yml
@@ -1,11 +1,12 @@
-name: released
+name: Scan Release Assets
 
 permissions:
-  contents: read
+  contents: write # Needed to update the release notes with the VT link
 
 on:
   release:
     types: [published]
+  workflow_dispatch: # Allows you to click "Run workflow" manually in the Actions tab
 
 jobs:
   virustotal:
@@ -15,7 +16,9 @@ jobs:
         uses: crazy-max/ghaction-virustotal@v4
         with:
           vt_api_key: ${{ secrets.VT_API_KEY }}
-          # This tells the action to look at the files you just uploaded to the release
+          # Monitors both Windows and Mac installers
           files: |
             *.exe
             *.dmg
+          # This adds the VT report link to your GitHub Release description
+          update_release_body: true
